@@ -427,6 +427,9 @@ bool bc_divide(bc_num numerator, bc_num divisor, bc_num *quot, size_t scale)
 		return true;
 	}
 
+	/* Length of numerator data that can be read */
+	size_t numerator_readable_len = numeratorend - numeratorptr + 1;
+
 	/* set scale to numerator */
 	if (numerator_scale > scale) {
 		size_t scale_diff = numerator_scale - scale;
@@ -434,16 +437,19 @@ bool bc_divide(bc_num numerator, bc_num divisor, bc_num *quot, size_t scale)
 			numerator_bottom_extension -= scale_diff;
 		} else {
 			numerator_bottom_extension = 0;
-			numeratorend -= scale_diff > numerator_top_extension ? scale_diff - numerator_top_extension : 0;
+			if (EXPECTED(numerator_readable_len > scale_diff)) {
+				numerator_readable_len -= scale_diff;
+				numeratorend -= scale_diff;
+			} else {
+				numerator_readable_len = 0;
+				numeratorend = numeratorptr;
+			}
 		}
 		numerator_top_extension = MIN(numerator_top_extension, scale);
 	} else {
 		numerator_bottom_extension += scale - numerator_scale;
 	}
 	numerator_scale = scale;
-
-	/* Length of numerator data that can be read */
-	size_t numerator_readable_len = numeratorend - numeratorptr + 1;
 
 	if (divisor_len > numerator_readable_len + numerator_bottom_extension) {
 		*quot = bc_copy_num(BCG(_zero_));
